--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-switch": "^6.0.0",
+    "react-vertical-timeline-component": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -34,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": ".",
+  "devDependencies": {
+    "@iconify/icons-logos": "^1.1.13",
+    "@iconify/react": "^1.1.4",
+    "gh-pages": "^3.2.3",
+    "node-sass": "^6.0.1",
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
